--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,6 @@ updates:
       interval: 'weekly'
       day: 'monday'
     reviewers:
-      - "kohld"
+      - 'kohld'
     assignees:
-      - "kohld"
+      - 'kohld'
