--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "preview": "bunx serve out",
     "lint": "next lint",
     "format": "prettier --write .",
     "test": "jest",
@@ -35,6 +35,7 @@
     "postcss": "^8",
     "tailwindcss": "^4",
     "typescript": "^5.9.3",
-    "prettier": "^3.8.0"
+    "prettier": "^3.8.1",
+    "@types/bun": "^1.3.6"
   }
 }
