[FEATURE] Scheduled GitHub Activity updates and 2x2 layout - Add update-github-activity.yml for daily stats fetching - Trigger deployment after stats update - Refactor GithubActivity to 2x2 grid (4 repos) to match Projects - Fix hydration mismatch errors - Align with Zenith project standards

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,14 @@ on:
   push:
     branches: ['main']
 
+  # Runs after the GitHub Activity update completes
+  workflow_run:
+    workflows: ["Update GitHub Activity"]
+    types:
+      - completed
+    branches:
+      - main
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -39,6 +47,11 @@ jobs:
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
+
+      - name: Fetch GitHub Activity
+        run: bun run data:fetch-github
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
       - name: Build with Next.js
         run: bun run build
