--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "preview": "bunx serve out",
+    "data:fetch-github": "bun scripts/fetch-github.ts",
     "lint": "next lint",
     "format": "prettier --write .",
     "test": "jest",
