[STYLE] Apply code formatting via Prettier - Format project files across all directories - Sync code style with established standards

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ on:
 
   # Runs after the GitHub Activity update completes
   workflow_run:
-    workflows: ["Update GitHub Activity"]
+    workflows: ['Update GitHub Activity']
     types:
       - completed
     branches:
