--- a/package.json
+++ b/package.json
@@ -14,29 +14,29 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "framer-motion": "^12.27.0",
+    "motion": "^12.29.2",
     "next": "^16.1.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.3.1",
-    "@types/jest": "^30.0.0",
-    "jest": "^30.2.0",
-    "jest-environment-jsdom": "^30.2.0",
-    "ts-jest": "^29.4.6",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.18",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.3.1",
+    "@types/bun": "^1.3.6",
+    "@types/jest": "^30.0.0",
     "@types/node": "^25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "^16",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8",
-    "tailwindcss": "^4",
-    "typescript": "^5.9.3",
     "prettier": "^3.8.1",
-    "@types/bun": "^1.3.6"
+    "tailwindcss": "^4",
+    "ts-jest": "^29.4.6",
+    "typescript": "^5.9.3"
   }
 }
